--- a/Deep Learning Portfolio Assignments/Project1_Airfoil/Airfoil_Project.ipynb
+++ b/Deep Learning Portfolio Assignments/Project1_Airfoil/Airfoil_Project.ipynb
@@ -21,6 +21,7 @@
    "id": "224f37d9",
    "metadata": {},
    "source": [
+    "You are a data scientist at NASA. You are given a NASA data set obtained from a series of aerodynamic and acoustic tests of two and three-dimensional airfoil blade sections conducted in an anechoic wind tunnel. The dataset contains the following features/predictors and label/target.\n",
     "This dataset has the following features:\n",
     "\n",
     "Frequency, in Hertz\n",
